tests/build/fail/widget_new/missing_captured2.stderr
error: missing required property `foo`
  --> $DIR/missing_captured2.rs:19:13
   |
19 |       let _ = test_widget! {
   |  _____________^
20 | |         // foo = true;
21 | |     };
   | |_____^
   |
   = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)
